add websocket for frontend

--- a/raisontext/static/html/home.html
+++ b/raisontext/static/html/home.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Text Classification</title>
+        <link rel="stylesheet" href="static/css/styles.css">
     </head>
     <body>
         <div>
@@ -10,6 +11,7 @@
         <div>
             <button id="submit-button">Submit</button>
         </div>
+        <div class="lds-default hidden"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
         <div>
             <label id="answer-label" rows="5" cols="10">Answer will be here</label>
         </div>
