--- a/raisontext/static/html/home.html
+++ b/raisontext/static/html/home.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Text Classification</title>
-        <link rel="stylesheet" href="static/css/styles.css">
+        <meta charset="UTF-8">
+        <meta name="csrf-token" content="{{ csrf_token() }}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+        rel="stylesheet" crossorigin="anonymous">
     </head>
+
     <body>
-        <div>
-            <textarea id="main-textarea" rows="10" cols="50"></textarea>
-        </div>
-        <div>
-            <button id="submit-button">Submit</button>
-        </div>
-        <div class="lds-default hidden"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-        <div>
-            <label id="answer-label" rows="5" cols="10">Answer will be here</label>
+        <div class="container">
+            <div class="col-8 mx-auto mt-5 text-center">
+                <h1 class="mb-3">Text Classification</h1>
+            </div>
+            <div class="row">
+                <div class="col-8 mx-auto mt-3">
+                    <textarea style="width: 850px; height: 200px" id="main-textarea"></textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2 mx-auto mt-5 text-center">
+                    <button class="btn btn-primary" id="submit-button">Submit</button>
+                </div>
+            </div>
+
+            <div class="lds-default hidden"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+
+            <div class="row">
+                <div class="col-1 mx-auto mt-3 text-center">
+                    <div>
+                        <label class="large-label" id="answer-label">Answer</label>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
+
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
